--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
   "require": {
+    "matomo/matomo": "4.16.1",
     "php": "~8.1"
-  }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
