--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
-  "require": {
-    "matomo/matomo": "4.16.1",
-    "php": "~8.1"
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true
+    "config": {
+        "platform": {
+            "php": "8.1"
+        }
+    }
 }
